# holytls

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY.md
.github/workflows/: ci.yml  fuzz.yml
bench/: .gitignore  HARNESS.md  README.md  SAMPLE_REPORT.md
bench/c/: bench_holytls.c
bench/config/: origin.env  server.caddyfile
bench/go/httpcloak/: go.mod  go.sum  main.go
bench/go/tls_client/: go.mod  main.go
bench/rust/wreq/: Cargo.toml
bench/rust/wreq/src/: main.rs
bench/scripts/: analyze_results.py  fetch_caddy.sh  gen_cert.sh  gen_payloads.sh  run_benchmark.sh  start_origin.sh
bench/server/: caddy.sha256
bench/server/payloads/: CHECKSUMS
bindings/python/: .gitignore  README.md  holytls_build.py  pyproject.toml  setup.py
bindings/python/examples/: async_concurrent.py  concurrent.py  fingerprint.py  post_json.py  quickstart.py  session_cookies.py  streaming.py  websocket.py
bindings/python/holytls/: __init__.py  _async.py  _client.py  _models.py  _native.py
bindings/python/tests/: test_async.py  test_binding.py  test_live.py  test_threadsafe.py
capi/: holytls_capi.c  holytls_capi.h  holytls_capi.map
cmake/: apply_boringssl_patch.cmake  apply_patch.cmake  toolchain-mingw64.cmake
cmake/patches/: boringssl-firefox-tls13-legacy-ext.patch  nghttp2-rfc7540-headers-priority.patch
examples/: bench_arena.c  fingerprint.c  google_fidelity.c  peet_compare.c  post_json.c  powhttp_proxy.c  quickstart.c  session.c  stealth.c
fuzz/: fuzz.h  fuzz_alt_svc.c  fuzz_base64.c  fuzz_cookie.c  fuzz_decompress.c  fuzz_persist.c  fuzz_persist_client.c  fuzz_url.c  standalone.c
fuzz/corpus/alt_svc/: 1  draft  h2_only  ma_huge  ma_zero  multi  persist
fuzz/corpus/base64/: bad_char  one_pad2  two_pad1
fuzz/corpus/cookie/: 2  cross_domain  dot_domain  empty_attrs  exp_asctime  exp_past  exp_rfc1123  exp_rfc850  full  long_value  maxage_neg  maxage_zero  quoted  samesite_none  samesite_strict  tld_domain
fuzz/corpus/decompress/: 1  brotli_repeat  brotli_text  deflate_raw  deflate_zlib  gzip_repeat  gzip_small  zstd_magic  zstd_repeat  zstd_text
fuzz/corpus/persist/: 1  all_sections  cookie_no_name  empty_cookies  expires_big  full  malformed  null_cookies  samesite_oob  wrong_types  wrong_version
fuzz/corpus/persist_client/: alt_svc_only  bad_base64  ech_only  full  malformed  no_origin  non_array  tls_only  ttl_huge  wrong_version
fuzz/corpus/url/: 1  2  bad_scheme  empty_auth  http_port  ipv6_port  no_sep  port_huge  port_zero  query_frag  upper_scheme  userinfo
scripts/: gen_psl.py  setup_trackme.sh
src/: holytls.c
src/base/: arena.c  arena.h  base.c  base.h  base64.c  base64.h  defer.h  platform_net.h  ring_alloc.h  string8.c  string8.h  u8buf.c  u8buf.h
src/core/: alt_svc.c  alt_svc.h  client.c  client.h  client_internal.h  cookie.c  cookie.h  decompress.c  decompress.h  ech.c  ech.h  header.c  header.h  header_order.c  header_order.h  json.c  json.h  manager.c  manager.h  persist.c  persist.h  pool.c  pool.h  psl.c  psl.h  psl_data.h  sec_fetch.c  sec_fetch.h  session.c  session.h  tls_stream.c  tls_stream.h  url.c  url.h
src/h1/: h1.c  h1.h
src/h2/: h2.c  h2.h
src/h3/: h3_control.c  h3_control.h  h3_nv.h  h3_session.c  h3_session.h
src/net/: connection.c  connection.h  dns_cache.c  dns_cache.h  loop.c  loop.h  proxy.c  proxy.h  quic_connection.c  quic_connection.h
src/profile/: chrome.c  firefox.c  profile.h  profiles.c  sec_ch_ua.c  sec_ch_ua.h
src/tls/: cert_compress.c  cert_compress.h  cert_pin.c  cert_pin.h  ja4.c  ja4.h  keylog.c  keylog.h  ssl_conn.c  ssl_conn.h  ssl_ctx.c  ssl_ctx.h
src/ws/: ws.c  ws.h  ws_frame.c  ws_frame.h
tests/: altsvc_live_test.c  arena_thread_test.c  base64_test.c  base_test.c  cert_pin_live_test.c  cert_pin_test.c  client_live_test.c  conn_test.c  cookie_test.c  core_test.c  defer_test.c  dns_cache_live_test.c  dns_cache_test.c  ech_live_test.c  ech_test.c  fingerprint_h3_test.c  h1_live_test.c  h1_test.c  h2_arena_test.c  h2_test.c  h3_control_test.c  header_order_live_test.c  header_order_pool_test.c  header_order_test.c  header_template_live_test.c  hook_live_test.c  hook_test.c  http_version_live_test.c  http_version_test.c  ja4_test.c  json_test.c  key_log_live_test.c  key_log_test.c  loop_test.c  manager_test.c  mtls_test.c  pool_h1_test.c  pool_h2_body_test.c  pool_live_test.c  pool_test.c  (+34 more)
tests/support/: loopback_server.c  loopback_server.h
